@@ -1,3 +1,6 @@
+2014-02-14  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/amflock.c: Check return value of truncate.
+
 2014-02-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/amflock.c: Detect failure to write the file and ftruncate
 	  it to 0.
